src/test/ui/match/match-slice-patterns.stderr
error[E0004]: non-exhaustive patterns: `&[_, Some(_), None, _]` not covered
  --> $DIR/match-slice-patterns.rs:14:11
   |
LL |     match list {
   |           ^^^^ pattern `&[_, Some(_), None, _]` not covered

error: aborting due to previous error

For more information about this error, try `rustc --explain E0004`.
